--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -1133,6 +1133,7 @@ footer[role="general"] .links li {
 .wp-caption {
   margin: 1em 0;
   text-align: center;
+  width: 100% !important;
 }
 .wp-caption-text {
   font-size: .8em !important;
