--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -1134,3 +1134,6 @@ footer[role="general"] .links li {
   font-size: .8em !important;
   color: #999;
 }
+.wp-caption.alignleft {
+  float: left;
+}
