--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -1140,3 +1140,7 @@ footer[role="general"] .links li {
 .wp-caption.alignright {
   float: right;
 }
+.wp-caption.aligncenter {
+  width: 100% !important;
+  text-align: center;
+}
